Add gradle configuration to create dist version